fix(backend): clean standard java entity and dto structure and modernize security config